# rusty-docker

./: .gitignore  Cargo.toml  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.github/workflows/: ci.yml  release.yml
.trae/specs/dockerfile-execution/: checklist.md  spec.md  tasks.md
.trae/specs/fix-cargo-check/: checklist.md  spec.md  tasks.md
.trae/specs/fix-cheating-behavior/: checklist.md  spec.md  tasks.md
.trae/specs/fix-docker-binary-calls/: checklist.md  spec.md  tasks.md
.trae/specs/oak-dockerfile-integration/: checklist.md  spec.md  tasks.md
.trae/specs/remove-bollard/: checklist.md  spec.md  tasks.md
.trae/specs/remove-yaml-deps/: checklist.md  spec.md  tasks.md
.trae/specs/restore-oak-yaml/: checklist.md  spec.md  tasks.md
.trae/specs/windows-support/: checklist.md  spec.md  tasks.md
backends/docker/: Cargo.toml  Readme.md
backends/docker-config/: Cargo.toml  readme.md
backends/docker-config/src/: config.rs  lib.rs  runtime.rs
backends/docker-etcd/: Cargo.toml  readme.md
backends/docker-etcd/src/: lib.rs
backends/docker-image/: Cargo.toml  readme.md
backends/docker-image/src/: format.rs  lib.rs
backends/docker-image/tests/: format_test.rs
backends/docker-network/: Cargo.toml  readme.md
backends/docker-network/src/: config.rs  lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
backends/docker-registry/: Cargo.toml  readme.md
backends/docker-registry/src/: client.rs  downloader.rs  lib.rs  types.rs
backends/docker-runtime/: Cargo.toml  readme.md
backends/docker-runtime/src/: file_share.rs  hyperv.rs  lib.rs  linux.rs  macos.rs  network_manager.rs  windows.rs  wsl2.rs
backends/docker-service/: Cargo.toml  README.md
backends/docker-service/src/: lib.rs
backends/docker-storage/: Cargo.toml  readme.md
backends/docker-storage/src/: lib.rs  overlay.rs  tests.rs
backends/docker-tools/: Cargo.toml  readme.md
backends/docker-tools/src/: lib.rs
backends/docker-tools/src/dockerfile/: context.rs  executor.rs  instructions.rs  mod.rs  parser.rs
backends/docker-tools/tests/: dockerfile_context_test.rs  dockerfile_executor_test.rs  dockerfile_instructions_test.rs  dockerfile_parse_test.rs  integration_test.rs
backends/docker-tools/tests/boundary/: docker_boundary_test.rs
backends/docker-tools/tests/error/: docker_error_test.rs
backends/docker-tools/tests/functional/: docker_functional_test.rs
backends/docker-types/: Cargo.toml  readme.md
backends/docker-types/src/: compose.rs  errors.rs  lib.rs
backends/docker/src/: cgroup.rs  error.rs  lib.rs  models.rs  namespace.rs  oci.rs  runtime.rs  storage.rs  user.rs
backends/docker/src/storage/: mod.rs  overlay2.rs  service.rs
backends/docker/src/swarm/: mod.rs
backends/docker/tests/: cgroup_test.rs  namespace_test.rs  oci_test.rs  overlay2_test.rs
backends/kubernetes/: Cargo.toml  readme.md
backends/kubernetes-tools/: Cargo.toml  readme.md
backends/kubernetes-tools/src/: lib.rs
backends/kubernetes-tools/tests/: helm_test.rs  kustomize_test.rs
backends/kubernetes-tools/tests/boundary/: kubectl_boundary_test.rs
backends/kubernetes-tools/tests/error/: kubectl_error_test.rs
backends/kubernetes-tools/tests/functional/: kubectl_functional_test.rs
backends/kubernetes/src/: api.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  runtime.rs
documentation/: package.json
documentation/advanced/: index.md
documentation/ja/: readme.md
documentation/ko/: index.md  readme.md
documentation/maintainer/: index.md
documentation/maintainer/architecture/: index.md
documentation/zh-hans/: index.md
documentation/zh-hans/concepts/: frontend.md  index.md
frontends/docker-crab-desktop/: Cargo.toml  readme.md  tauri.conf.json
frontends/docker-crab-desktop/src/: main.rs
frontends/docker-crab-h5/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js
frontends/docker-crab-h5/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontends/docker-crab-h5/src/api/: index.ts
frontends/docker-crab-h5/src/api/docker/: container.ts  endpoint.ts  image.ts  index.ts  network.ts  system.ts  volume.ts
frontends/docker-crab-h5/src/components/: SearchFilter.vue  SearchResults.vue  TagManager.vue
frontends/docker-crab-h5/src/stores/modules/: containerStore.ts  endpointStore.ts  imageStore.ts  networkStore.ts  searchStore.ts  systemStore.ts  tagStore.ts  volumeStore.ts
frontends/docker-crab-h5/src/types/: docker.ts  index.ts
frontends/docker-crab-h5/src/views/containers/: List.vue
frontends/docker-crab-h5/src/views/endpoints/: List.vue
frontends/docker-crab-h5/src/views/images/: List.vue
frontends/docker-crab-h5/src/views/networks/: List.vue
frontends/docker-crab-h5/src/views/system/: Monitor.vue  Status.vue
frontends/docker-crab-h5/src/views/volumes/: List.vue
frontends/homepage/: package.json  vite.config.ts
frontends/homepage/documentation/: readme.md
frontends/homepage/documentation/de/: index.md  readme.md
frontends/homepage/documentation/en/: index.md
frontends/homepage/documentation/fr/: index.md  readme.md
frontends/homepage/documentation/ja/: index.md
frontends/homepage/documentation/ru/: readme.md
frontends/homepage/documentation/zh-hans/: readme.md
frontends/homepage/documentation/zh-hans/tutorials/: index.md  windows-installation.md
frontends/homepage/documentation/zh-hant/: index.md
frontends/homepage/src/: App.vue  docs.ts
frontends/homepage/src/components/: DocTreeNode.vue  MarkdownViewer.vue  index.ts
frontends/homepage/src/utils/: docs.ts
scripts/: check.mjs
