[package]
name = "docker-config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Docker core runtime"
repository = "https://github.com/nyar-vm/rusty-docker/tree/main/backends/docker-config"
categories = ["development-tools"]
tags = ["docker", "core", "runtime", "rust"]

[dependencies]
docker-types = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
