[package]
name = "docker-network"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Docker network management"
authors = { workspace = true }
repository = "https://github.com/nyar-vm/rusty-docker/tree/main/backends/docker-network"
categories = ["development-tools"]
tags = ["docker", "network", "rust"]

[dependencies]
docker-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bollard = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
