[package]
name = "docker-registry2" # name `docker-registry` had been squatted
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Docker registry client"
authors = { workspace = true }
repository = "https://github.com/nyar-vm/rusty-docker/tree/main/backends/docker-registry"
categories = ["development-tools"]
tags = ["docker", "registry", "rust"]

[lib]
name = "docker_registry"

[dependencies]
docker-types = { workspace = true }
wae-request = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
num_cpus = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
