[package]
name = "docker-service"
version = "0.0.1"
edition = "2024"

[dependencies]
docker-types = { path = "../docker-types", version = "0.0.1" }
docker-network = { path = "../docker-network", version = "0.0.1" }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
redis = "1.0.5"
hashbrown = "0.16.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
