[package]
name = "docker-service"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
docker-types = { workspace = true }
docker-network = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
hashbrown = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
