[package]
name = "docker2" # name `docker` had been squatted
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Lightweight container runtime implemented in Rust"
repository = "https://github.com/nyar-vm/rusty-docker/tree/main/backends/docker"
categories = ["development-tools"]
tags = ["docker", "container", "runtime", "rust"]

[lib]
name = "docker"

[dependencies]
docker-types = { workspace = true }
docker-network = { workspace = true }
docker-registry = { workspace = true }
docker-image = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
futures-util = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
nightly = []
