[package]
name = "oh-my-crab"
publish = false
version = { workspace = true }
description = "OpenCrab GUI client"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }



[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }
docker = { workspace = true }
docker-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
